--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "sass": "^1.58.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
-    "vite-plugin-solid": "^2.5.0",
-    "sass": "^1.58.0"
+    "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
     "@lexical/markdown": "^0.8.0",
     "@lexical/rich-text": "^0.8.0",
+    "@lexical/table": "^0.8.0",
     "@lexical/utils": "^0.8.0",
     "lexical": "^0.8.0",
     "solid-js": "^1.6.10"
